# iqs7211e

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: copilot-instructions.md
docs/: driver_notes.md
docs/iqs7211e-example-code/src/IQS7211E/: IQS7211E.cpp  IQS7211E_init.h
examples/: 01_config.rs  02_setup.rs  03_events.rs
src/: config.rs  control.rs  defs.rs  event.rs  init.rs  lib.rs  reg.rs  rw.rs  setup.rs  touchpad.rs
src/config/: alp.rs  auto_tune.rs  conversion.rs  gesture.rs  hardware.rs  mod.rs  output.rs  pinout.rs  timing.rs  trackpad.rs
src/control/: config_settings.rs  mod.rs  system_control.rs
src/event/: gesture.rs  info.rs  mod.rs  touchpoint.rs
src/iqs7211e-example-code/: iqs7211e-example-code.ino
